# myetc

./: .bashrc  .vimrc  CMakeLists.txt  backupetc.sh  gitconfig.sh  makefile  recoverMyetc.sh  varDebug.mk
.ssh/: id_rsa  id_rsa.pub
